--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,36 +2,27 @@ name: Master
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Python 3.6
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.6
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.13
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --editable .
-        pip install -r dev-requirements.txt
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
 
-    - name: Run black
-      run: |
-        black --check .
+      - name: Install Python dependencies
+        run: uv sync
 
-    - name: Test with pytest
-      run: |
-        pytest tests
-
-    - name: Publish Docker Images Dry Run
-      uses: ./.github/actions/publish-docker-images
-      with:
-        dryrun: "true"
+      - name: Test with pytest
+        run: |
+          uv run pytest tests
