--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "repro2"
-version = "0.0.1"
+version = "0.0.2"
 description = "An open-source library for reproducing results from research papers"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -19,6 +19,7 @@ line-length = 120
 
 [dependency-groups]
 dev = ["black>=25.1.0", "parameterized>=0.9.0", "pytest>=8.3.5", "ruff>=0.11.0"]
+docs = ["sphinx", "numpydoc", "furo", "myst-parser>=0.17.0"]
 
 [tool.uv]
 package = true
