--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "repro2"
-version = "0.0.2"
+version = "0.0.3"
 description = "An open-source library for reproducing results from research papers"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -14,15 +14,13 @@ dependencies = [
     "six>=1.17.0",
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [tool.ruff]
 line-length = 120
 
 [dependency-groups]
 dev = ["black>=25.1.0", "parameterized>=0.9.0", "pytest>=8.3.5", "ruff>=0.11.0"]
 docs = ["sphinx", "numpydoc", "furo", "myst-parser>=0.17.0"]
-
-[tool.uv]
-package = true
-
-[tool.setuptools]
-py-modules = []
